sensitive_data los base_url se pasaron de listas a str, añadido el path auth/, el media root se colocó manual, añadidos los context processors de url_base, full_name y role, se cambio el label de usuario a correo, el user login ya no fuerza un success_url, sino que busca si tiene un next url, paths para las templates de registro actualizadas, url ver-request añadido, manejo de next con redirect y pasar los request con HttpResponse, correcciones en el app.js para que no se dañara el renderizado de archivos estaticos, modificación en el base.html, creación del form para cambiar contraseña, login, registro y cod de validación, añadidas urls al navbar

--- a/Backend/public/templates/auth/templates/login/login.html
+++ b/Backend/public/templates/auth/templates/login/login.html
@@ -1,5 +1,23 @@
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Crear usuario</button>
-</form>
+{% extends 'base.html' %}
+
+{% block title %}Iniciar Sesión{% endblock title %}
+
+{% block content %}
+<section class="text-dark fw-light lh-base mt-5 hero position-relative overflow-hidden align-items-center"
+    id="iniciar-sesión">
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            {{form.as_p}}
+
+            {% if request.GET.next %}
+            <input type="hidden" name="next" value="{{request.GET.next}}">
+            {% endif %}
+
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-outline-success">Iniciar Sesión</button>
+            </div>
+        </form>
+    </div>
+</section>
+{% endblock content %}
