--- a/Backend/public/templates/home/templates/documentation.html
+++ b/Backend/public/templates/home/templates/documentation.html
@@ -1398,7 +1398,7 @@
 {% endblock extra_css%}
 
 {% block content %}
-<section class="text-dark fw-light lh-base vscode-body vscode-light hero position-relative overflow-hidden align-items-center" id="documentation">
+<section class="container text-dark fw-light lh-base mt-5 vscode-body vscode-light hero position-relative overflow-hidden align-items-center" id="documentation">
     <h1 id="journal-app">Journal APP</h1>
     <h2 id="requerimientos">Requerimientos</h2>
     <p>Desarrollar una aplicación web para registrar los diarios de campo de las clases dictadas por los docentes de la
