--- a/Backend/public/templates/base.html
+++ b/Backend/public/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> {% block title %}{% endblock title %} | Journal APP</title>
     <!-- App favicon -->
-    <link rel="shortcut icon" href="{{ favicon }}" />
-    {% block extra_css%}
-    {% endblock extra_css%}
+    <link rel="shortcut icon" href="{{url_base}}{{ favicon }}" />
+    <!-- Extra CSS -->
+    {% block extra_css%}{% endblock extra_css%}
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/materialdesignicons.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/pe-icon-7-stroke.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/materialdesignicons.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/pe-icon-7-stroke.css" />
     <!-- custom Css -->
-    <link rel="stylesheet" id="app-css" type="text/css" href="{% static 'css/style.css' %}" />
+    {% block css_wozia %}
+    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/style.css" id="app-css" />
     <!-- colors -->
-    <link href="{% static 'css/colors/amber.css' %}" rel="stylesheet" type="text/css" id="color-opt" />
-
+    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/colors/amber.css" id="color-opt" />
+    {% endblock css_wozia %}
 </head>
 <body data-bs-target=".navbar" data-bs-offset="110">
     <!-- light-dark mode button -->
@@ -36,20 +36,16 @@
         {% include "partials/footer.html" %}      
     {% endblock footer %}
     
+    <!-- Scripts -->
     {% block extra_java_script %}{% endblock extra_java_script %}
-
     <!-- Javascript -->
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
-
-
+    <script src="{{url_base}}/static/js/bootstrap.bundle.min.js"></script>
     <!-- feather icon -->
-    <script src="{% static 'js/feather.js'%}"></script>
-
+    <script src="{{url_base}}/static/js/feather.js"></script>
     <!-- app js -->
-    <script src="{% static 'js/app.js'%}"></script>
-
+    <script src="{{url_base}}/static/js/app.js"></script>
+    <!-- custom js -->
     {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
