Inicio uso del template sb-admin-pro Incluidas las urls del daily_journal Añadido el django_extensions en el settings (urls) Añadidos los context_processors de otros modelos Cambio de los app_name:names Añadido el campo FK people a Users Cambio del Admin Auth Cambio en los modelos de Auth users Admin con redes sociales Creación del admin para daily_journal ModelForm del daily_journal Creación del modelo Journal Creación de las URLS del journal Creación de la vista del journal Formularios y vistas de edición de usuario y avatar Urls del journal generales

--- a/Backend/public/templates/home/base.html
+++ b/Backend/public/templates/home/base.html
@@ -12,8 +12,8 @@
     {% block extra_css%}{% endblock extra_css%}
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/wozia/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/wozia/materialdesignicons.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/wozia/pe-icon-7-stroke.css" />
+    <!-- ICONS FONTAWEASOME -->
+    <script src="https://kit.fontawesome.com/50e9368c7c.js" crossorigin="anonymous"></script>
     <!-- custom Css -->
     {% block css_wozia %}
     <link rel="stylesheet" type="text/css" href="{{url_base}}/static/css/wozia/style.css" id="app-css" />
